# mlinspect

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  poetry-requirements.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  combine-prs.yml  dependabot-approve-and-auto-merge.yml
demo/feature_overview/: missing_embeddings.py  no_missing_embeddings.py
example_pipelines/: __init__.py  _pipelines.py
example_pipelines/adult_complex/: adult_complex.py
example_pipelines/adult_simple/: adult_simple.ipynb  adult_simple.py
example_pipelines/compas/: compas.py
example_pipelines/healthcare/: healthcare.py  healthcare_utils.py
example_pipelines/healthcare/custom_monkeypatching/: patch_healthcare_utils.py
examples/: example.ipynb
experiments/performance/: _benchmark_utils.py  _empty_inspection.py
features/explainability/: example_pipeline.py  pipeline.ipynb  pipeline_with_dag.ipynb  pipeline_with_dag.py  pipeline_with_inspection.ipynb  pipeline_with_inspection.py  test_example_pipeline.ipynb
features/explainability/backends/: _explainability_backend.py
features/explainability/checks/: shapley_values.py
features/explainability/dale/: __init__.py  bin_estimation.py  dale.py  utils.py  visualization.py
features/explainability/docs/: DAG_REPRESENTATION.md  INSPECTION.md
features/explainability/examples/: __init__.py  test_pipeline.py
features/explainability/examples/alibi/ale/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/alibi/ig/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/dale/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/dalex/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/lime/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/multiple_methods/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/shap/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/sklearn_inspection/ice/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/examples/sklearn_inspection/pdp/: dag.ipynb  inspection.ipynb  pipeline.py
features/explainability/inspections/: explainability_methods_enum.py  explainer.py  shapley_methods_enum.py  shapley_values.py  utils.py
features/explainability/monkey_patching/: patch_alibi.py  patch_dale.py  patch_dalex.py  patch_lime.py  patch_shap.py  patch_sklearn_inspection.py
features/explainability/pipelines/: __init__.py  adult_simple_with_explainability.py  compas_decision_tree_classifier.py  compas_sgd_classifier.py
mlinspect/: __init__.py  _inspector_result.py  _pipeline_inspector.py
mlinspect/backends/: _all_backends.py  _backend.py  _backend_utils.py  _iter_creation.py  _pandas_backend.py  _shap_backend.py  _sklearn_backend.py
mlinspect/checks/: __init__.py  _check.py  _no_bias_introduced_for.py  _no_illegal_features.py  _similar_removal_probabilities_for.py
mlinspect/inspections/: __init__.py  _arg_capturing.py  _column_propagation.py  _completeness_of_columns.py  _count_distinct_of_columns.py  _histogram_for_columns.py  _inspection.py  _inspection_input.py  _inspection_result.py  _intersectional_histogram_for_columns.py  _lineage.py  _materialize_first_output_rows.py
mlinspect/instrumentation/: _call_capture_transformer.py  _dag_node.py  _pipeline_executor.py
mlinspect/monkeypatching/: README.md  _mlinspect_ndarray.py  _monkey_patching_utils.py  _patch_numpy.py  _patch_pandas.py  _patch_sklearn.py  _patch_statsmodels.py
mlinspect/testing/: _random_annotation_testing_inspection.py  _testing_helper_utils.py
mlinspect/utils/: __init__.py  _utils.py
mlinspect/visualisation/: __init__.py  _visualisation.py
test/: test_pipeline_inspector.py
test/backends/: test_pandas_backend.py  test_sklearn_backend.py
test/checks/: test_no_bias_introduced_for.py  test_no_illegal_features.py  test_similar_removal_probablities_for.py
test/demo/feature_overview/: test_feature_overview.py  test_missing_embeddings.py  test_no_missing_embeddings.py
test/example_pipelines/: test_adult_complex.py  test_adult_simple.py  test_compas.py  test_healthcare.py  test_patch_healthcare_utils.py
test/experiments/performance/: test_benchmark_utils.py  test_performance_benchmarks.py
test/features/explainability/backends/: test_explainability_backend.py
test/features/explainability/inspections/: test_explainer.py
test/features/explainability/monkey_patching/: test_patch_alibi.py  test_patch_dale.py  test_patch_dalex.py  test_patch_lime.py  test_patch_shap.py  test_patch_sklearn_inspection.py
test/features/test_utils/: utils.py
test/inspections/: test_arg_capturing.py  test_column_propagation.py  test_completeness_of_columns.py  test_count_distinct_of_columns.py  test_histogram_for_columns.py  test_intersectional_histogram_for_columns.py  test_lineage.py  test_materialize_first_output_rows.py
test/instrumentation/: test_pipeline_executor.py
test/monkeypatching/: test_patch_numpy.py  test_patch_pandas.py  test_patch_sklearn.py  test_patch_statsmodels.py
test/utils/: test_utils.py
test/visualisation/: test_visualisation.py
