[tool.poetry]
name = "mlinspect"
version = "0.0.1.dev0"
description = "Inspect ML Pipelines in the form of a DAG"
authors = ["Stefan Grafberger <stefangrafberger@gmail.com>"]
readme = "README.md"
license = "Apache License 2.0"
classifiers=[
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.9'
    ]

[tool.poetry.dependencies]
python = "3.9.16"
scikit-learn = "1.4.0"
protobuf = "4.25.2"
pandas = "2.2.0"
numpy = "1.24.3"
six = "1.16.0"
nbformat = "5.9.2"
nbconvert = "7.16.0"
ipython = "8.18.1"
astpretty = "3.0.0"
astmonkey = "0.3.6"
networkx = "3.2.1"
more-itertools = "10.2.0"
pygraphviz = "1.11"
testfixtures = "7.2.2"
matplotlib = "3.8.2"
gorilla = "0.4.0"
astunparse = "1.6.3"
setuptools = "69.1.0"
scipy = "1.12.0"
statsmodels = "0.14.1"

[tool.poetry.group.dev.dependencies]
pylint = "3.0.3"
pytest = "8.0.0"
pytest-pylint = "0.21.0"
pytest-runner = "6.0.1"
pytest-cov = "4.1.0"
pytest-pycharm = "0.7.0"
pytest-mock = "3.12.0"
gensim = "4.3.2"
tensorflow = "2.13.1"
keras = "2.13.1"
jupyter = "1.0.0"
importnb = "2023.11.1"
seaborn = "0.13.2"
shap="0.44.1"
scikeras="0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--pylint --pylint-rcfile=./pylintrc --cov=mlinspect --cov-report=xml"
testpaths = ["test"]