[tool.poetry]
name = "mlinspect"
version = "0.0.1.dev0"
description = "Inspect ML Pipelines in the form of a DAG"
authors = ["Stefan Grafberger <stefangrafberger@gmail.com>"]
readme = "README.md"
license = "Apache License 2.0"
classifiers=[
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.9'
    ]

[tool.poetry.dependencies]
python = "3.10.13"
scikit-learn = "~1.3.2"
protobuf = "4.25.3"
pandas = "~2.1.4"
numpy = "1.24.3"
six = "1.16.0"
nbformat = "5.10.4"
nbconvert = "7.16.4"
ipython = "8.24.0"
astpretty = "3.0.0"
astmonkey = "0.3.6"
networkx = "3.3"
more-itertools = "10.2.0"
pygraphviz = "1.12"
testfixtures = "8.2.0"
matplotlib = "3.8.4"
gorilla = "0.4.0"
astunparse = "1.6.3"
setuptools = "69.5.1"
scipy = "~1.12.0"
statsmodels = "0.14.2"

[tool.poetry.group.dev.dependencies]
pylint = "3.1.0"
pytest = "8.2.0"
pytest-pylint = "0.21.0"
pytest-runner = "6.0.1"
pytest-cov = "5.0.0"
pytest-pycharm = "0.7.0"
pytest-mock = "3.14.0"
gensim = "4.3.2"
tensorflow = "2.13.1"
keras = "2.13.1"
jupyter = "1.0.0"
importnb = "2023.11.1"
seaborn = "0.13.2"
shap="0.45.1"
scikeras="0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--pylint --pylint-rcfile=./pylintrc --cov=mlinspect --cov-report=xml"
testpaths = ["test"]